# stock-news-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  todo.md
.github/: copilot-instructions.md
agent/: __init__.py  state.py  stock_news_agent.py
agent/nodes/: __init__.py  load_news.py  route_messages.py  save_to_db.py  search_news.py  summarize_news.py
agent/utils/: __init__.py  financial.py  llm_models.py  notebook_utilities.py
app/utils/: financial.py  llm_models.py
data/: client.py  schema.sql
notebooks/: stock-news-agent.ipynb  stock_news_agent.ipynb
