[project]
name = "stock-news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.3.15",
    "langserve>=0.3.3",
    "langsmith>=0.8.8",
    "notebook>=7.5.6",
    "pydantic>=2.13.4",
    "sse-starlette>=3.4.4",
    "supabase>=2.30.1",
    "tavily>=1.1.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
